--- a/CBI/igvtools/module.lua.tmpl
+++ b/CBI/igvtools/module.lua.tmpl
@@ -7,8 +7,12 @@ local name = "IGVTools"
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing")
-whatis("URL: https://software.broadinstitute.org/software/igv/igvtools")
-whatis("Description: The igvtools utility provides a set of tools for pre-processing data files. Note, `igvtools` moved to IGV as of IGV (>= 2.5.0). Example: `igvtools help`.")
+whatis("URL: https://software.broadinstitute.org/software/igv/igvtools, https://software.broadinstitute.org/software/igv/2.12.x#LatestVersion (changelog), https://github.com/igvteam/igv/ (source code)")
+whatis([[
+Description: The igvtools utility provides a set of tools for pre-processing data files.
+Example: `igvtools help`.
+Note: `igvtools` moved to IGV as of IGV (>= 2.5.0).
+]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
