--- a/CBI/ripgrep/module.lua.tmpl
+++ b/CBI/ripgrep/module.lua.tmpl
@@ -6,8 +6,12 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: utility, files, search")
-whatis("URL: https://github.com/BurntSushi/ripgrep")
-whatis("Description: ripgrep is a line-oriented search tool that recursively searches your current directory for a regex pattern. By default, ripgrep will respect your .gitignore and automatically skip hidden files/directories and binary files. ripgrep is similar to other popular search tools like The Silver Searcher, ack and grep.  Examples: `rg --version` and `rg -i 'lorem ipsum'`. Warning: Only the most recent version of this software will be kept.")
+whatis("URL: https://github.com/BurntSushi/ripgrep, https://github.com/BurntSushi/ripgrep/blob/master/CHANGELOG.md (changelog)")
+whatis([[
+Description: ripgrep is a line-oriented search tool that recursively searches your current directory for a regex pattern. By default, ripgrep will respect your .gitignore and automatically skip hidden files/directories and binary files. ripgrep is similar to other popular search tools like The Silver Searcher, ack and grep.
+Examples: `rg --version` and `rg -i 'lorem ipsum'`.
+Warning: Only the most recent version of this software will be kept.
+]])
 
 -- Local variables
 local root = os.getenv("SOFTWARE_ROOT_CBI")
