--- a/CBI/shellcheck-repl/module.lua.tmpl
+++ b/CBI/shellcheck-repl/module.lua.tmpl
@@ -16,6 +16,11 @@ Warning: Only the most recent version of this software will be kept.
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 
-source_sh(pathJoin(home .. "shellcheck-repl.bash"))
+local script = pathJoin(home, "shellcheck-repl.bash")
 
+if LmodVersion() > "8.6" then
+  source_sh(pathJoin(script))
+else
+  execute{cmd = "source " .. script, modeA = {"load"}}
+end
 
