Need to manual drop leading periods from version for _hidden_ modules

--- a/CBI/java-tweaks/module.lua.tmpl
+++ b/CBI/java-tweaks/module.lua.tmpl
@@ -4,6 +4,8 @@ Java Tweaks: Adjust Java Settings for the Current Compute Environment
 
 local name = myModuleName()
 local version = myModuleVersion()
+version = string.gsub(version, "^[.]", "")
+
 whatis("Version: " .. version)
 whatis("Keywords: java, settings")
 whatis([[
