--- a/CBI/r-siteconfig/module.lua.tmpl
+++ b/CBI/r-siteconfig/module.lua.tmpl
@@ -6,7 +6,10 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: R, configuration")
-whatis("Description: Sets R options and environment variables customized for the current compute environment. Notably, it configures R to install packages from local CRAN and Bioconductor mirrors without the need for internet access.  Examples: In R, `install.packages(\"ggplot2\")`.")
+whatis([[
+Description: Sets R options and environment variables customized for the current compute environment. Notably, it configures R to install packages from local CRAN and Bioconductor mirrors without the need for internet access.
+Examples: In R, `install.packages(\"ggplot2\")`.
+]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
