--- a/CBI/star/module.lua.tmpl
+++ b/CBI/star/module.lua.tmpl
@@ -7,7 +7,7 @@ whatis("Keywords: sequencing")
 whatis("URL: https://github.com/alexdobin/STAR, https://github.com/alexdobin/STAR/blob/master/CHANGES.md (changelog)")
 whatis([[
 Description: STAR (Spliced Transcripts Alignment to a Reference) is a fast NGS read aligner for RNA-seq data.
-Example: `STAR --help`.
+Examples: `STAR --help`.
 ]])
 
 local name = "STAR"
