--- a/CBI/cmake/module.lua.tmpl
+++ b/CBI/cmake/module.lua.tmpl
@@ -7,7 +7,10 @@ local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: development, make")
 whatis("URL: https://cmake.org/, https://github.com/Kitware/CMake/releases")
-whatis("Description: CMake is cross-platform free and open-source software for managing the build process of software using a compiler-independent method. It supports directory hierarchies and applications that depend on multiple libraries. Example: `cmake --version`.")
+whatis([[
+Description: CMake is cross-platform free and open-source software for managing the build process of software using a compiler-independent method. It supports directory hierarchies and applications that depend on multiple libraries.
+Examples: `cmake --version`.
+]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
