--- a/CBI/igv/module.lua.tmpl
+++ b/CBI/igv/module.lua.tmpl
@@ -8,7 +8,10 @@ local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing")
 whatis("URL: https://software.broadinstitute.org/software/igv/, https://software.broadinstitute.org/software/igv/download")
-whatis("Description: The Integrative Genomics Viewer (IGV) is a high-performance visualization tool for interactive exploration of large, integrated genomic datasets. It supports a wide variety of data types, including array-based and next-generation sequence data, and genomic annotations.  Example: `igv`.  Note: IGV (>= 2.5.0) requires Java 11. Coincidentally, `igvtools` is integrated with IGV (>= 2.5.0).")
+whatis([[
+Description: The Integrative Genomics Viewer (IGV) is a high-performance visualization tool for interactive exploration of large, integrated genomic datasets. It supports a wide variety of data types, including array-based and next-generation sequence data, and genomic annotations.
+Examples: `igv`.  Note: IGV (>= 2.5.0) requires Java 11. Coincidentally, `igvtools` is integrated with IGV (>= 2.5.0).
+]])
 
 -- depends_on("jdk")
 
