--- a/CBI/lazygit/module.lua.tmpl
+++ b/CBI/lazygit/module.lua.tmpl
@@ -7,7 +7,11 @@ local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: cli, shell")
 whatis("URL: https://pandoc.org/, https://github.com/jgm/pandoc")
-whatis("Description: Pandoc is a Haskell library and software tool for converting from one markup format to another, and a command-line tool that uses this library.  Example: `pandoc --version`. Warning: Only the most recent version of this software will be kept.")
+whatis([[
+Description: Pandoc is a Haskell library and software tool for converting from one markup format to another, and a command-line tool that uses this library.
+Examples: `pandoc --version`.
+Warning: Only the most recent version of this software will be kept.
+]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
