--- a/CBI/libsbml/module.lua.tmpl
+++ b/CBI/libsbml/module.lua.tmpl
@@ -7,7 +7,9 @@ local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: programming, library")
 whatis("URL: http://sbml.org/Software/libSBML, https://github.com/sbmlteam/libsbml")
-whatis("Description: LibSBML is a native library for reading, writing and manipulating files and data streams containing the Systems Biology Markup Language (SBML). It offers language bindings for C, C++, C#, Java, JavaScript, MATLAB, Perl, PHP, Python, R and Ruby.")
+whatis([[
+Description: LibSBML is a native library for reading, writing and manipulating files and data streams containing the Systems Biology Markup Language (SBML). It offers language bindings for C, C++, C#, Java, JavaScript, MATLAB, Perl, PHP, Python, R and Ruby.
+]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
