--- a/CBI/samtools/module.lua.tmpl
+++ b/CBI/samtools/module.lua.tmpl
@@ -7,7 +7,10 @@ local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing")
 whatis("URL: https://www.htslib.org/, https://github.com/samtools/samtools")
-whatis("Description: SAMtools is a suite of programs for interacting with high-throughput sequencing data.  Example: `samtools --version`.")
+whatis([[
+Description: SAMtools is a suite of programs for interacting with high-throughput sequencing data.
+Examples: `samtools --version`.
+]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
