--- a/CBI/scl-rh-ruby/module.lua.tmpl
+++ b/CBI/scl-rh-ruby/module.lua.tmpl
@@ -9,7 +9,10 @@ local scl_name = "rh-ruby" .. version
 whatis("Version: " .. version)
 whatis("Keywords: programming, Ruby")
 whatis("URL: https://www.softwarecollections.org/en/scls/rhscl/" .. scl_name .. "/")
-whatis("Description: Enables the CentOS Software Collection (SCL) `" .. scl_name .. "` in the current environment.  This is an alternative to calling `source scl_source enable " .. scl_name .. "`, which is an approach that is not of ficially supported by RedHat/CentOS.  Example: `irb --help`, `ruby --help`, `ruby script.rb`.")
+whatis([[
+Description: Enables the CentOS Software Collection (SCL) `" .. scl_name .. "` in the current environment.  This is an alternative to calling `source scl_source enable " .. scl_name .. "`, which is an approach that is not of ficially supported by RedHat/CentOS.
+Examples: `irb --help`, `ruby --help`, `ruby script.rb`.
+]])
 
 local home = "/opt/rh/" .. scl_name
 
