Lmod: Use Example: -> Examples:

--- a/CBI/apache-ant/module.lua.tmpl
+++ b/CBI/apache-ant/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: programming")
 whatis("URL: https://ant.apache.org/bindownload.cgi, https://ant.apache.org/antnews.html (changelog)")
 whatis([[
 Description: Apache Ant is a Java library and command-line tool that help building software.
-Example: `ant -h`
+Examples: `ant -h`
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
