--- a/CBI/bamutil/module.lua.tmpl
+++ b/CBI/bamutil/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: version control")
 whatis("URL: https://genome.sph.umich.edu/wiki/BamUtil, https://genome.sph.umich.edu/wiki/BamUtil#Releases (changelog), https://github.com/statgen/bamUtil (source code)")
 whatis([[
 Description: bamUtil is a repository that contains several programs that perform operations on SAM/BAM files. All of these programs are built into a single executable, `bam`.
-Example: `bam help`.
+Examples: `bam help`.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
