--- a/CBI/bowtie/module.lua.tmpl
+++ b/CBI/bowtie/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: sequencing")
 whatis("URL: http://bowtie-bio.sourceforge.net/index.shtml, http://bowtie-bio.sourceforge.net/index.shtml (changelog), https://github.com/BenLangmead/bowtie (source code)")
 whatis([[
 Description: Bowtie is an ultrafast, memory-efficient short read aligner.
-Example: `bowtie --version` and `ls $BOWTIE_HOME/{genomes,indexes}`
+Examples: `bowtie --version` and `ls $BOWTIE_HOME/{genomes,indexes}`
 Note: This is Bowtie v1 - _not v2_.
 ]])
 
