--- a/CBI/cellranger/module.lua.tmpl
+++ b/CBI/cellranger/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: sequencing, 10x genomics")
 whatis("URL: https://support.10xgenomics.com/single-cell-gene-expression/software/pipelines/latest/what-is-cell-ranger, https://support.10xgenomics.com/single-cell-gene-expression/software/pipelines/latest/release-notes (changelog), https://github.com/10XGenomics/cellranger (source code)")
 whatis([[
 Description: Cell Ranger is a set of analysis pipelines that process Chromium Single Cell 3' RNA-seq output to align reads, generate gene-cell matrices and perform clustering and gene expression analysis.
-Example: `cellranger`.
+Examples: `cellranger`.
 Warning: To prevent a single Cell Ranger process from hijacking all CPU and RAM by default, this module sets environment variable `MROFLAGS='--localcores=1 --localmem=8 --limit-loadavg'` making those the default.
 ]])
 
