--- a/CBI/gdal/module.lua.tmpl
+++ b/CBI/gdal/module.lua.tmpl
@@ -7,7 +7,7 @@ whatis("Keywords: spatial, library")
 whatis("URL: https://gdal.org/, https://github.com/OSGeo/gdal/blob/master/NEWS.md (changelog), https://github.com/OSGeo/gdal (source code)")
 whatis([[
 Description: GDAL is an open source X/MIT licensed translator library for raster and vector geospatial data formats.
-Example: `gdalinfo --version`
+Examples: `gdalinfo --version`
 ]])
 
 -- GDAL (>= 3.0.0), requires PROJ (>= 6.0.0)
