--- a/CBI/jags/module.lua.tmpl
+++ b/CBI/jags/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: statistics")
 whatis("URL: http://mcmc-jags.sourceforge.net/, https://sourceforge.net/p/mcmc-jags/code-0/ci/default/tree/NEWS (changelog), https://sourceforge.net/projects/mcmc-jags/ (source code)")
 whatis([[
 Description: JAGS is Just Another Gibbs Sampler.  It is a program for analysis of Bayesian hierarchical models using Markov Chain Monte Carlo (MCMC) simulation not wholly unlike BUGS.
-Example: `jags` and `man jags`.
+Examples: `jags` and `man jags`.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
