--- a/CBI/java-tweaks/module.lua.tmpl
+++ b/CBI/java-tweaks/module.lua.tmpl
@@ -10,7 +10,7 @@ whatis("Version: " .. version)
 whatis("Keywords: java, settings")
 whatis([[
 Description: This hidden environment module, tweaks the `_JAVA_OPTIONS` environment variable to improve how Java runs on the current machine.
-Example: `echo "_JAVA_OPTIONS='${_JAVA_OPTIONS}'"`.
+Examples: `echo "_JAVA_OPTIONS='${_JAVA_OPTIONS}'"`.
 ]])
 
 if mode() == "load" then
