--- a/CBI/lg3/module.lua.tmpl
+++ b/CBI/lg3/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: sequencing, mutations, tumor, normal")
 whatis("URL: https://github.com/UCSF-Costello-Lab/LG3_Pipeline")
 whatis([[
 Description: This is the LG3 Pipeline developed by the UCSF Costello Lab.
-Example: `lg3 --help`.
+Examples: `lg3 --help`.
 Warning: This software can currently only run on the C4 cluster at the UCSF Cancer Center.
 ]])
 
