--- a/CBI/rstudio-server/module.lua.tmpl
+++ b/CBI/rstudio-server/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: programming, R, GUI")
 whatis("URL: https://rstudio.com/products/rstudio/#rstudio-server, https://www.rstudio.com/products/rstudio/release-notes/ (changelog), https://github.com/rstudio/rstudio/ (source code)")
 whatis([[
 Description: The RStudio Server is an integrated development environment (IDE) for R that can be used from the web browser.
-Example: `rserver`.
+Examples: `rserver`.
 Warning: This is work under construction!
 ]])
 
