--- a/CBI/scl-rh-python/module.lua.tmpl
+++ b/CBI/scl-rh-python/module.lua.tmpl
@@ -11,7 +11,7 @@ whatis("Keywords: programming, Python")
 whatis("URL: https://www.softwarecollections.org/en/scls/rhscl/" .. scl_name .. "/")
 whatis([[
 Description: Enables the CentOS Software Collection (SCL) `rh-python<version>` in the current environment.  This is an alternative to calling `source scl_source enable rh-python<version>`, which is not officially supported by RedHat/CentOS.
-Example: `python --version`, and `pip --version`.
+Examples: `python --version`, and `pip --version`.
 Warning: Older versions may be removed in the future.
 ]])
 
