--- a/CBI/wip-jupyternotebook/module.lua.tmpl
+++ b/CBI/wip-jupyternotebook/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: programming, python")
 whatis("URL: https://jupyter.org/, https://jupyter-notebook.readthedocs.io/en/stable/ (docs), https://jupyter-notebook.readthedocs.io/en/stable/changelog.html (changelog), https://github.com/jupyter/ (source code)")
 whatis([[
 Description: 
-Example: `jupyter --help`, `jupyter --version`, `jupyter lab`, and `man ipython`.
+Examples: `jupyter --help`, `jupyter --version`, `jupyter lab`, and `man ipython`.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
