--- a/CBI/bats-core/module.lua.tmpl
+++ b/CBI/bats-core/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: bash, shell, testing")
 whatis("URL: https://github.com/bats-core/bats-core, https://github.com/bats-core/bats-core#version-history (changelog), https://bats-core.readthedocs.io/en/stable/ (documentation)")
 whatis([[
 Description: Bats is a TAP-compliant testing framework for Bash. It provides a simple way to verify that the UNIX programs you write behave as expected.
-Example: `bats --version`, `bats --help`, `man bats`, `man 7 bats`, and `bats tests/`.
+Examples: `bats --version`, `bats --help`, `man bats`, `man 7 bats`, and `bats tests/`.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
