--- a/CBI/blat/module.lua.tmpl
+++ b/CBI/blat/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: sequencing, alignment")
 whatis("URL: https://genome.ucsc.edu/goldenPath/help/blatSpec.html")
 whatis([[
 Description: BLAT - client and server combined into a single program, first building the index, then using the index, and then exiting.
-Example: `blat`
+Examples: `blat`
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
