--- a/CBI/bwa/module.lua.tmpl
+++ b/CBI/bwa/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: sequencing")
 whatis("URL: http://bio-bwa.sourceforge.net/, https://github.com/lh3/bwa/blob/master/NEWS.md (changelog), https://github.com/lh3/bwa (source code)")
 whatis([[
 Description: Burrows-Wheeler Aligner (BWA) is a software package for mapping low-divergent sequences against a large reference genome, such as the human genome.
-Example: `bwa`.
+Examples: `bwa`.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
