--- a/CBI/expect/module.lua.tmpl
+++ b/CBI/expect/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: scripting, programming")
 whatis("URL: https://core.tcl-lang.org/expect/index, https://core.tcl-lang.org/expect/file?name=ChangeLog&ci=tip (changelog), https://core.tcl-lang.org/expect/dir?ci=tip (source code), https://sourceforge.net/projects/expect/files/Expect/ (download)")
 whatis([[
 Description: Expect is a tool for automating interactive applications such as telnet, ftp, passwd, fsck, rlogin, tip, etc. Expect really makes this stuff trivial. Expect is also useful for testing these same applications.
-Example: `expect -version`, and `man expect`.
+Examples: `expect -version`, and `man expect`.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
