--- a/CBI/fastqc/module.lua.tmpl
+++ b/CBI/fastqc/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: sequencing, qc")
 whatis("URL: https://www.bioinformatics.babraham.ac.uk/projects/fastqc/, https://raw.githubusercontent.com/s-andrews/FastQC/master/RELEASE_NOTES.txt (changelog), https://github.com/s-andrews/FastQC/ (source code)")
 whatis([[
 Description: FastQC is a program designed to spot potential problems in high throughput sequencing datasets. It runs a set of analyses on one or more raw sequence files in fastq or bam format and produces a report which summarises the results.
-Example: `fastqc --version`.
+Examples: `fastqc --version`.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
