--- a/CBI/gcta/module.lua.tmpl
+++ b/CBI/gcta/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: genome")
 whatis("URL: https://yanglab.westlake.edu.cn/software/gcta/#Overview, https://cnsgenomics.com/software/gcta/")
 whatis([[
 Description: A tool for Genome-wide Complex Trait Analysis (GCTA).
-Example: `gcta64`.
+Examples: `gcta64`.
 ]])
 
 local root = os.getenv("SOFTWARE_ROOT_CBI")
