--- a/CBI/rclone/module.lua.tmpl
+++ b/CBI/rclone/module.lua.tmpl
@@ -7,7 +7,7 @@ whatis("Keywords: files, transfers")
 whatis("URL: https://rclone.org/, https://rclone.org/changelog/ (changelog) https://github.com/rclone/rclone (source code)")
 whatis([[
 Description: Rclone is a command line program to sync files and directories to and from a large number of end points on the local file system, or remote file systems, and in the cloud.
-Example: `rclone --version`, `rclone --help`, `rclone config`, and `info rclone`.
+Examples: `rclone --version`, `rclone --help`, `rclone config`, and `info rclone`.
 Warning: Only the most recent version of this software will be kept.
 ]])
 
