--- a/CBI/tmux/module.lua.tmpl
+++ b/CBI/tmux/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: screen, tmux")
 whatis("URL: https://github.com/tmux/tmux/wiki, https://github.com/tmux/tmux/blob/master/CHANGES (changelog), https://github.com/tmux/tmux (source code)")
 whatis([[
 Description: tmux is a terminal multiplexer. It lets you switch easily between several programs in one terminal, detach them (they keep running in the background) and reattach them to a different terminal. And do a lot more.
-Example: `tmux` and `man tmux`.
+Examples: `tmux` and `man tmux`.
 Warning: Only the most recent version of this software will be kept.
 ]])
 
