gcta/1.93.3beta2: update URLs

--- a/CBI/gcta/module.lua.tmpl
+++ b/CBI/gcta/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: genome")
-whatis("URL: https://yanglab.westlake.edu.cn/software/gcta/#Overview, https://cnsgenomics.com/software/gcta/")
+whatis("URL: https://yanglab.westlake.edu.cn/software/gcta/#Overview, https://cnsgenomics.com/software/gcta/, https://github.com/jianyangqt/gcta (source code)")
 whatis([[
 Description: A tool for Genome-wide Complex Trait Analysis (GCTA).
 Examples: `gcta64`.
