--- a/CBI/htslib/module.lua.tmpl
+++ b/CBI/htslib/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing, programming")
-whatis("URL: https://www.htslib.org/, https://github.com/samtools/htslib")
+whatis("URL: https://www.htslib.org/, https://github.com/samtools/htslib/blob/develop/NEWS (changelog), https://github.com/samtools/htslib (source code)")
 whatis([[
 Description: HTSlib is an implementation of a unified C library for accessing common file formats, such as SAM, CRAM and VCF, used for high-throughput sequencing data, and is the core library used by samtools and bcftools. HTSlib also provides the bgzip, htsfile, and tabix utilities.
 Examples: `bgzip --version`, `htsfile --version`, and `tabix --version`.
