--- a/CBI/libsbml/module.lua.tmpl
+++ b/CBI/libsbml/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: programming, library")
-whatis("URL: http://sbml.org/Software/libSBML, https://github.com/sbmlteam/libsbml")
+whatis("URL: http://sbml.org/Software/libSBML, https://github.com/sbmlteam/libsbml/blob/development/NEWS.txt (changelog), https://github.com/sbmlteam/libsbml (source code)")
 whatis([[
 Description: LibSBML is a native library for reading, writing and manipulating files and data streams containing the Systems Biology Markup Language (SBML). It offers language bindings for C, C++, C#, Java, JavaScript, MATLAB, Perl, PHP, Python, R and Ruby.
 ]])
