--- a/CBI/pandoc/module.lua.tmpl
+++ b/CBI/pandoc/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: cli, shell")
-whatis("URL: https://pandoc.org/, https://github.com/jgm/pandoc")
+whatis("URL: https://pandoc.org/, https://github.com/jgm/pandoc/blob/master/changelog.md (changelog), https://github.com/jgm/pandoc (source code)")
 whatis([[
 Description: Pandoc is a Haskell library and software tool for converting from one markup format to another, and a command-line tool that uses this library.
 Examples: `pandoc --version`.
