--- a/CBI/salmon/module.lua.tmpl
+++ b/CBI/salmon/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: sequencing")
-whatis("URL: https://combine-lab.github.io/salmon/, https://github.com/COMBINE-lab/salmon")
+whatis("URL: https://combine-lab.github.io/salmon/, https://github.com/COMBINE-lab/salmon/releases (changelog), https://github.com/COMBINE-lab/salmon (source code)")
 whatis([[
 Description: Highly-accurate & wicked fast transcript-level quantification from RNA-seq reads using selective alignment.
 Examples: `salmon --version`.
