--- a/CBI/varscan/module.lua.tmpl
+++ b/CBI/varscan/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: high-throughput sequencing")
-whatis("URL: https://dkoboldt.github.io/varscan/, https://github.com/dkoboldt/varscan")
+whatis("URL: https://dkoboldt.github.io/varscan/, https://github.com/dkoboldt/varscan/releases (changelog), https://github.com/dkoboldt/varscan (source code)")
 whatis([[
 Description: VarScan is a platform-independent mutation caller for targeted, exome, and whole-genome resequencing data generated on Illumina, SOLiD, Life/PGM, Roche/454, and similar instruments.
 Examples: `varscan`, which is an alias to `java -jar $VARSCAN_HOME/VarScan.jar`.
